name:                mu6
version:             0.1.0.0
synopsis:            Low-level esolang based on μ-recursive functions
description:         μ6 is a minimalist programming language that extends the standard basis of μ-recursive functions with an pairing function and two unpairing (left and right element).
homepage:            https://github.com/bforte/mu6#README.md
license:             BSD3
license-file:        LICENSE
author:              BMO
copyright:           2018 BMO
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mu6
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Eval, Parser
  default-language:    Haskell2010
  ghc-options:         -Wunused-imports -Wunused-matches -Wincomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , microlens
                     , microlens-th
                     , modular-arithmetic
                     , parsec
